# Kotoamatsukami

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  readme.md
config/: config.json  generate.py  p.py  quick_pow.c  quick_pow.ll  sig.ll  test  test.c
config/antidebug/: Kotoamatsukami_Antidebug.c
ctf/: 1.py  2.py  a.out  chal.so.i64  chal.so.id0  chal.so.id1  chal.so.id2  chal.so.nam  chal.so.til  enc.txt  idea.py  ideatest.txt  key.txt  log  main.py  solve.cpp  solve.py  test.py  test2.py  tmp.ll
scripts/: a.out  compile.sh  handle2.py  rc4.s  rc41.s  test2.ll  test2.s  vm.ll  vm.s  x86del.py
src/: PassPlugin.cpp  jitter.cpp
src/include/: AddJunkCodePass.h  Config.h  ForObsPass.h  IndirectJmpPass.h  Loopen.hpp  SplitBasicBlock.h  SwitchToIfElsePass.h  X86IndirectJmpPass.h  config.h  jitter.hpp  utils.hpp
src/pass/: AddJunkCodePass.cpp  AntiDebugPass.cpp  Branch2Call.cpp  ForObsPass.cpp  IndirectBranch.cpp  IndirectJmpPass.cpp  IndirectJmpPass.cpp.bak  Loopen.cpp  MBASubstitudePass.cpp  SplitBasicBlock.cpp  SwitchToIfElsePass.cpp  X86IndirectJmpPass.cpp
src/utils/: config.cpp  config.h  utils.cpp
test/: _frontend.ll  _optimized.ll  compile.sh  fortest.c  handle.py  in.s  output.s  rc4.c  test.c  test1.ll  test2.c  test2_frontend.ll  vm
tests/: 1.c  _frontend.ll  _optimized.ll  angr_test_for.c  foo.c  handle2.py  quick_pow.c  rc4.c  test1.c  test2.c  vm.c
